--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,27 @@
+# App Configuration
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NODE_ENV=development
+
+# Supabase
 NEXT_PUBLIC_SUPABASE_URL=https://abc123.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+# Stripe
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_12345
 STRIPE_SECRET_KEY=sk_12345
-LEMON_SQUEEZY_API_KEY=your_api_key_here
-LEMON_SQUEEZY_STORE_ID=your_store_id_here
+STRIPE_WEBHOOK_SECRET=whsec_12345
+
+# LemonSqueezy
+LEMONSQUEEZY_API_KEY=your_api_key_here
+LEMONSQUEEZY_STORE_ID=your_store_id_here
+LEMONSQUEEZY_WEBHOOK_SECRET=your_webhook_secret_here
+NEXT_PUBLIC_LEMONSQUEEZY_VARIANT_ID=your_variant_id_here
+
+# Mailgun
 MAILGUN_API_KEY=your_mailgun_api_key
 MAILGUN_DOMAIN=your_mailgun_domain
 MAILGUN_FROM_EMAIL=noreply@yourdomain.com
+MAILGUN_SIGNING_KEY=your_mailgun_signing_key
+
+# Database (PostgreSQL)
+DATABASE_URL=postgresql://user:password@localhost:5432/dbname
