--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,12 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.docker
+.env.production
 
 # vercel
 .vercel
@@ -50,5 +56,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-#drizzle 
+#drizzle
 /drizzle
+
