--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "@lemonsqueezy/lemonsqueezy.js": "^4.0.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
@@ -17,7 +18,6 @@
     "@stripe/stripe-js": "^5.6.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
-    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
@@ -25,11 +25,9 @@
     "drizzle-orm": "^0.39.3",
     "form-data": "^4.0.1",
     "framer-motion": "^12.0.6",
-    "lemonsqueezy": "^0.0.1-claimed",
-    "lemonsqueezy.ts": "^0.1.8",
     "lucide-react": "^0.474.0",
     "mailgun.js": "^11.1.0",
-    "next": "16.0.7",
+    "next": "16.1.1",
     "next-auth": "^4.24.11",
     "pg": "^8.13.3",
     "react": "19.2.0",
